test/src/e2e_vm_tests/test_programs/should_fail/module_cyclic_reference/src/lib.sw
library;

mod a;
mod b;

fn main() -> u32 {
  a::a();
  0
}
